...
import { SmoothDropdown } from '../animations/smooth-dropdown';
import { Spiral } from '../animations/spiral';
import { SplitButton } from '../animations/split-button';
import { SteddyGraphInteraction } from '../animations/steddy-graph-interaction';
import { StoryList } from '../animations/story-list';
import { SwipeCards } from '../animations/swipe-cards';
import { TelegramThemeSwitch } from '../animations/telegram-theme-switch';
import { ThemeCanvasAnimation } from '../animations/theme-canvas-animation';
import { Toast } from '../animations/toast';
import { TwitterTabBar } from '../animations/twitter-tab-bar';

const Screens = [
  {
...
